wip: upgrade modules

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,27 +2,30 @@
  * VueStudio v1.0.0 (https://seantheme.com/vue-studio/)
  * Copyright 2020 SeanTheme
  */
-@import "./clock/css/loader.css";
+
 @import "_variables.scss";
+@import "./clock/css/loader.css";
 /*@import "~bootswatch/dist/cosmo/bootstrap.min.css";*/
-@import "node_modules/bootstrap/scss/bootstrap.scss";
-@import "node_modules/bootstrap-vue/src/index.scss";
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~bootstrap-vue/dist/bootstrap-vue.css";
 @import "~alertifyjs/build/css/alertify.min.css";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 /*@import "./clock/css/plugins.css";*//*@import "./clock/css/plugins.css";*/
 @import "./clock/css/components/timeline/custom-timeline.css";
-
-@import "_functions.scss";
-@import "_mixins.scss";
-@import "_helper.scss";
-@import "_reboot.scss";
-
-@import "_app.scss";
-@import "_ui.scss";
-@import "_plugins.scss";
-@import "_pages.scss";
-@import "_widgets.scss";
+@import "~@fullcalendar/bootstrap/main.css";
+//@import "_functions.scss";
+//@import "_mixins.scss";
+//@import "_helper.scss";
+//@import "_reboot.scss";
+//
+//@import "_app.scss";
+//@import "_ui.scss";
+//@import "_plugins.scss";
+//@import "_pages.scss";
+//@import "_widgets.scss";
+//@import "ui";
+//@import "widgets";
 
 
 .form-group > label {
@@ -30,7 +33,7 @@
     font-size: 0.83em;
     margin-bottom: 0 !important;
     text-transform: capitalize;
-    font-family: $font-family-monospace;
+    font-family: 'monospace';
     margin-left: 10px;
 }
 
@@ -39,7 +42,7 @@
     font-size: 0.83em;
     margin-bottom: 0 !important;
     text-transform: capitalize;
-    font-family: $font-family-monospace;
+    font-family: 'monospace';
     margin-left: 10px;
 }
 
@@ -107,6 +110,7 @@
 input, select > :enabled {
     /*font-size: 1.01rem !important;*/
     background: white;
+
 }
 
 input:disabled, input:read-only, select:read-only, .vs--disabled, .v-select.disabled, textarea:disabled, textarea:read-only {
